Updated digital twin page

--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -292,13 +292,17 @@ title: IEEE Digital Twin 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Digital Twin 2025 Paper Publication</h3>
           <p class="fs-5">
-            All types of papers must be submitted via the EDAS system at this
-            link <a href="https://edas.info/N33584">EDAS</a>. Regular, Workshop
-            and Forum papers are limited to 8, 6 and 3 pages respectively. All
-            accepted papers will be published by IEEE (IEEE-DL and EI indexed)
-            in the Smart World Congress Proceedings. Best Paper Awards will be
+            All Digital Twin 2025 papers must be submitted via the EDAS system
+            at this link <a href="https://edas.info/N33584">EDAS</a>. Regular,
+            Workshop and Forum papers are limited to 8, 6 and 3 pages
+            respectively. All manuscripts should be formatted in the
+            <a href="https://www.ieee.org/conferences/publishing/templates.html"
+              >IEEE Computer Society Proceedings Format</a
+            >, and submitted in the Portable Document Format (.pdf). Accepted
+            papers will be published by IEEE (IEEE-DL and EI indexed) in the
+            Smart World Congress Proceedings. Best Paper Awards will be
             presented to high quality papers. Selected papers will be
-            recommended to a number of special issues of prestigious journals.
+            recommended to a number of special issues of prestigious journal.
           </p>
           <div>
             <a class="btn btn-primary fw-bolder" href="https://edas.info/N33584"
