Updated workshop acceptance date

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -72,7 +72,7 @@ title: IEEE SWC 2025 CFP
           <h5 class="fs-6 fw-bold text-center">
             Tutorial/WS/SS Proposal Acceptance
           </h5>
-          <h6 class="">March TBD, 2025</h6>
+          <h6 class="">March 31, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Conference Dates</h5>
           <h6 class="">August 18 - 22, 2025</h6>
@@ -315,7 +315,7 @@ title: IEEE SWC 2025 CFP
       Dr. Qiang Ye at (<a href="mailto:qiang.ye@ucalgary.ca"
         >qiang.ye@ucalgary.ca</a
       >) by March 15, 2025 and the decision on Acceptance will be notified by
-      March TBD, 2025.
+      March 31, 2025.
     </p>
     <h3 class="">
       IEEE SWC 2025 Special Sessions and Workshops Information and
