--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ title: Home
           <h5 class="fs-6 fw-bold text-center">
             Tutorial / Workshop / Special Session Acceptance
           </h5>
-          <h6 class="">March TBD, 2025</h6>
+          <h6 class="">March 31, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Conference Dates</h5>
           <h6 class="">August 18 - 22, 2025</h6>
