Added hybrid to conference titles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-3 fw-bolder mt-5">IEEE Smart World Congress 2025</h1>
+      <h1 class="display-3 fw-bolder mt-5">IEEE Smart World Congress 2025 (Hybrid)</h1>
       <h3 class="w-75 responsive-width fw-medium text-center">
         Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
       </h3>
