--- a/uic/index.html
+++ b/uic/index.html
@@ -21,7 +21,7 @@ title: IEEE UIC 2025
     >
       <h1 class="display-5 fw-bolder mt-5">
         The 22nd IEEE International Conference on Ubiquitous Intelligence and
-        Computing
+        Computing (Hybrid)
       </h1>
       <div>
         <h3>Calgary, Alberta, Canada</h3>
