--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -20,7 +20,7 @@ title: IEEE Digital Twin 2025
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
-        The 2025 IEEE International Conference on Digital Twin
+        The 2025 IEEE International Conference on Digital Twin (Hybrid)
       </h1>
       <!-- <h3 class="w-75 responsive-width fw-medium text-center">
         Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
