--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -20,7 +20,7 @@ title: IEEE MVS 2025
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
-        IEEE International Conference on Metaverse 2025
+        IEEE International Conference on Metaverse 2025 (Hybrid)
       </h1>
       <!-- <h3 class="w-75 responsive-width fw-medium text-center">
         Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
