Work on digital twin conference

--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -113,6 +113,9 @@ title: IEEE Digital Twin 2025
               <h5 class="fs-6">
                 Kefeng Li, Macao Polytechnic University, China
               </h5>
+              <h5 class="fs-6">
+                Lingling Fang, Liaoning Normal University, China
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
