Work on ATC organizing committee

--- a/atc/index.html
+++ b/atc/index.html
@@ -140,9 +140,7 @@ title: IEEE UIC 2025
           <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Workshop Chairs</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">
-                Qianli Zhou, Northwestern Polytechnical University, China
-              </h5>
+              <h5 class="fs-6">Lipeng Pan, Northwest A&F University, China</h5>
               <h5 class="fs-6">
                 Tianyu Wang, Dalian University of Technology, China
               </h5>
@@ -162,7 +160,7 @@ title: IEEE UIC 2025
             <h5 class="fs-6 fw-bold">Steering Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Victor C. M. Leung, Shenzhen MSU-BIT University, China
+                Victor C. M. Leung, University of British Columbia, Canada
               </h5>
               <h5 class="fs-6">
                 Sonia Heemstra de Groot, Eindhoven University of Technology,
