--- a/wsw-forum/index.html
+++ b/wsw-forum/index.html
@@ -107,7 +107,7 @@ title: Women in the Smart World Forum 2025
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column">
-            <h5 class="fs-6 fw-bold">Steering Chairs</h5>
+            <h5 class="fs-6 fw-bold">Steering Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">Runhe Huang (Chair), Hosei University, Japan</h5>
               <h5 class="fs-6">Zhi Jin, Peking University, China</h5>
