--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ title: Home
           <h4 class="fw-bold">Key Dates and Deadlines</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Full Paper Submission</h5>
-          <h6 class="">March 31, 2025</h6>
+          <h6 class=""> April 14, 2025 (extended) </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
           <h6 class="">May 31, 2025</h6>
@@ -87,7 +87,7 @@ title: Home
           <h5 class="fs-6 fw-bold text-center">
             Tutorial / Workshop / Special Session Proposal
           </h5>
-          <h6 class="">March 31, 2025</h6>
+          <h6 class=""> April 14, 2025 (extended)</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Tutorial / Workshop / Special Session Acceptance
