--- a/uic/index.html
+++ b/uic/index.html
@@ -48,7 +48,7 @@ title: IEEE UIC 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Paper Submission Deadline</h5>
-          <h6 class="">March 31, 2025</h6>
+          <h6 class=""> April 14, 2025 (extended)</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
           <h6 class="">May 31, 2025</h6>
