--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -50,7 +50,7 @@ title: IEEE Digital Twin 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Paper Submission Deadline</h5>
-          <h6 class="">March 31, 2025</h6>
+          <h6 class=""> April 14, 2025 (extended)</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Workshop Papers Deadline</h5>
           <h6 class="">February 15, 2025</h6>
