--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -51,7 +51,7 @@ title: IEEE ScalCom 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Paper Submission Deadline</h5>
-          <h6 class="">April 15, 2025</h6>
+          <h6 class=""> April 14, 2025 (extended)</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
           <h6 class="">June 1, 2025</h6>
