Work on AI and Machine Learning Workshop

--- a/workshops/ai-and-machine-learning/index.html
+++ b/workshops/ai-and-machine-learning/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Convergence of Minds Workshop 2025
+title: AI and Machine Learning Workshop 2025
 ---
 
 <!-- Hero Section -->
@@ -20,7 +20,8 @@ title: Convergence of Minds Workshop 2025
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
-        Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
+        AI and Machine Learning: Transforming Data Analytics for Global Impact
+        on Sustainability, Healthcare, and a Resilient Future
       </h1>
     </div>
   </div>
@@ -33,7 +34,7 @@ title: Convergence of Minds Workshop 2025
     <div class="col-sm-12 d-flex flex-column gap-4">
       <div class="d-flex flex-column gap-4">
         <h2 class="fs-2 mb-2">
-          Join us at the Convergence of Minds Workshop 2025
+          Join us at the AI and Machine Learning Workshop 2025
         </h2>
         <div class="d-flex gap-1 flex-column">
           <div class="d-flex flex-column">
