Work on AI and Machine Learning Workshop

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -37,7 +37,8 @@ title: Workshops
   <div class="row g-5">
     <div class="col-sm-12 d-flex flex-column gap-4">
       <h2 class="fs-2">
-        Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
+        AI and Machine Learning: Transforming Data Analytics for Global Impact
+        on Sustainability, Healthcare, and a Resilient Future
       </h2>
       <p class="fs-5">
         In an era defined by unprecedented data volumes and complex global
