--- a/workshops/next-gen-networking/index.html
+++ b/workshops/next-gen-networking/index.html
@@ -158,7 +158,7 @@ title: Next Generation Networking Workshop 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h2 class="fs-2">Submission Guidelines</h2>
           <p class="fs-5">
-            Papers should be submitted via EDAS viz the link below. All papers
+            Papers should be submitted via EDAS via the link below. All papers
             must be submitted electronically and in PDF format. The material
             presented should be original and not published or under submission
             elsewhere.
