Updates to FUSION workshop

--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -72,18 +72,21 @@ title: FUSION Workshop 2025
         >
           <h4 class="fs-5 fw-bold">Organizers</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
-            <div class="d-flex flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
+            <div class="d-flex flex-column w-100">
               <h5 class="fs-6">
-                Bernady O. Apduhan, Kyushu Sangyo University, Japan
+                Bernady O. Apduhan <br />
+                Kyushu Sangyo University, Japan <br />
                 <a href="mailto:bob@is.kyusan-u.ac.jp">bob@is.kyusan-u.ac.jp</a>
               </h5>
               <h5 class="fs-6">
-                Robert C-H. Hsu, Chung Hua University, Taiwan
+                Robert C-H. Hsu <br />
+                Chung Hua University, Taiwan <br />
                 <a href="mailto:chh@chu.edu.tw">chh@chu.edu.tw</a>
               </h5>
               <h5 class="fs-6">
-                Kazuaki Tanaka, Kyushu Institute of Technology, Japan
+                Kazuaki Tanaka <br />
+                Kyushu Institute of Technology, Japan <br />
                 <a href="mailto:kazuaki@ics.kyutech.ac.jp"
                   >kazuaki@ics.kyutech.ac.jp</a
                 >
