--- a/workshops/next-gen-networking/index.html
+++ b/workshops/next-gen-networking/index.html
@@ -61,22 +61,25 @@ title: Next Generation Networking Workshop 2025
         >
           <h4 class="fs-5 fw-bold">Organizers</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Huaqing Wu University of Calgary, Canada
+                Huaqing Wu <br />
+                University of Calgary, Canada <br />
                 <a href="mailto:huaqing.wu1@ucalgary.ca"
                   >huaqing.wu1@ucalgary.ca</a
                 >
               </h5>
               <h5 class="fs-6">
-                Steve Drew University of Calgary, Canada
+                Steve Drew <br />
+                University of Calgary, Canada <br />
                 <a href="mailto:steve.drew@ucalgary.ca"
                   >steve.drew@ucalgary.ca</a
                 >
               </h5>
               <h5 class="fs-6">
-                Liang Xue York University, Canada
+                Liang Xue <br />
+                York University, Canada <br />
                 <a href="mailto:lxue03@yorku.ca">lxue03@yorku.ca</a>
               </h5>
             </div>
