--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -54,25 +54,28 @@ title: SEGA Workshop 2025
         >
           <h4 class="fs-5 fw-bold">Organizers</h4>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">General Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Michael Pin-Chuan Lin Mount Saint Vincent University Canada,
+                Michael Pin-Chuan Lin <br />
+                Mount Saint Vincent University Canada <br />
                 <a href="mailto:Michael.Lin@msvu.ca">Michael.Lin@msvu.ca</a>
               </h5>
               <h5 class="fs-6">
-                Jeeho Ryoo Fairleigh Dickinson University, Canada,
+                Jeeho Ryoo <br />
+                Fairleigh Dickinson University, Canada <br />
                 <a href="mailto:j.ryoo@fdu.edu">j.ryoo@fdu.edu</a>
               </h5>
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Francesco Pupo The University of Calabria (Unical) Italy,
+                Francesco Pupo <br />
+                The University of Calabria, Italy <br />
                 <a href="mailto:francesco.pupo@unical.it"
                   >francesco.pupo@unical.it</a
                 >
@@ -80,19 +83,22 @@ title: SEGA Workshop 2025
             </div>
           </div>
           <hr class="w-100" />
-          <div class="d-flex gap-1 flex-column">
+          <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Advisory Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Phil Winne Simon Fraser University, Canada,
+                Phil Winne<br />
+                Simon Fraser University, Canada<br />
                 <a href="mailto:winne@sfu.ca">winne@sfu.ca</a>
               </h5>
               <h5 class="fs-6">
-                Oscar Lin Athabasca University Canada,
+                Oscar Lin <br />
+                Athabasca University Canada<br />
                 <a href="mailto:oscarl@athabascau.ca">oscarl@athabascau.ca</a>
               </h5>
               <h5 class="fs-6">
-                Giancarlo Fortino The University of Calabria (Unical) Italy,
+                Giancarlo Fortino <br />
+                The University of Calabria, Italy <br />
                 <a href="mailto:giancarlo.fortino@unical.it"
                   >giancarlo.fortino@unical.it</a
                 >
@@ -118,7 +124,7 @@ title: SEGA Workshop 2025
           technologists. It will explore methodologies like generative AI and
           reinforcement learning to address technical challenges such as content
           quality, ethical alignment, and adaptive learning systems.
-          Participants will examine strategies to optimize AI- generated
+          Participants will examine strategies to optimize AI-generated
           educational materials, improve human-AI interaction frameworks, and
           deploy RL for personalized learning pathways. The workshop welcomes
           submissions on real-world applications, content validation techniques,
