--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -59,7 +59,7 @@ title: SEGA Workshop 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">
                 Michael Pin-Chuan Lin <br />
-                Mount Saint Vincent University Canada <br />
+                Mount Saint Vincent University, Canada <br />
                 <a href="mailto:Michael.Lin@msvu.ca">Michael.Lin@msvu.ca</a>
               </h5>
               <h5 class="fs-6">
@@ -93,7 +93,7 @@ title: SEGA Workshop 2025
               </h5>
               <h5 class="fs-6">
                 Oscar Lin <br />
-                Athabasca University Canada<br />
+                Athabasca University, Canada<br />
                 <a href="mailto:oscarl@athabascau.ca">oscarl@athabascau.ca</a>
               </h5>
               <h5 class="fs-6">
