SEGA 2025 CFP and Submission Guidelines Update

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -23,6 +23,7 @@ title: SEGA Workshop 2025
         The 1st International Workshop on Smart Education in the Age of
         Generative AI (SEGA) 2025
       </h1>
+      <a href="./CFP_SEGA_2025.pdf" class="btn btn-primary w-50">Call For Papers</a>
     </div>
   </div>
 </section>
@@ -78,6 +79,19 @@ title: SEGA Workshop 2025
                 The University of Calabria, Italy <br />
                 <a href="mailto:francesco.pupo@unical.it"
                   >francesco.pupo@unical.it</a
+                >
+              </h5>
+            </div>
+          </div>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column w-100">
+            <h5 class="fs-6 fw-bold">Publicity Chair</h5>
+            <div class="d-flex flex-column">
+              <h5 class="fs-6">
+                Marco Ho <br />
+                British Columbia Institute of Technology, Canada <br />
+                <a href="mailto:marco_ho@bcit.ca"
+                  >marco_ho@bcit.ca</a
                 >
               </h5>
             </div>
@@ -172,10 +186,61 @@ title: SEGA Workshop 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h2 class="fs-2">Submission Guidelines</h2>
           <p class="fs-5">
-            SEGA 2025 is scheduled as a hybrid meeting. For each accepted paper,
-            one author must register and participate in the workshop. Accepted
-            papers will be published in the IEEE SWC 2025 Proceedings (IEEE
-            CPS).
+            To respect the efforts of reviewers and in the interest of 
+            fairness to all prospective authors, we request that all submissions 
+            to SEGA 2025 follow the formatting and submission rules detailed 
+            below. To maintain a review process that is fair to all potential 
+            authors, submissions that violate these instructions may not be r
+            eviewed.
+          </p>
+          <h5 class="fs-5">Requirements</h5>
+          <p class="fs-5">
+            We invite submissions in two categories: regular paper (6 pages) and 
+            short papers (4 pages) excluding references.
+          </p>
+            <ul>
+              <li>
+                No appendix is allowed
+              </li>
+              <li>
+                Each reference must specify all authors (no et al.)
+              </li>
+              <li>
+                Paper size: US Letter 8.5in x 11in
+              </li>
+              <li>
+                Ensure that the figures and tables are legible
+              </li>
+            </ul>
+          <p class="fs-5">
+            A submission can have at most 2 additional pages with the pages 
+            overlength charge if accepted. The material presented should be 
+            original and not published or under submission elsewhere. All 
+            manuscripts should be formatted manuscripts must be in English, 
+            following the IEEE two-column manuscript templates for conference 
+            proceedings instructions: 
+            <a href="https://www.ieee.org/conferences/publishing/templates.html">
+              Template</a>
+            <br /><br />
+            All types of papers should be submitted via the conferences’ EDAS 
+            system. Authors should register with the EDAS system first, and then 
+            make the submission via the conference link. Declare all the authors 
+            of the paper upfront. Addition/removal of authors once the paper is 
+            accepted will have to be approved by the program chairs, since it 
+            potentially undermines the goal of eliminating conflicts for reviewer 
+            assignment.
+          </p>
+          <a href="https://edas.info/newPaper.php?c=33582&track=131098" class="btn btn-primary w-50">Submit Your Work</a>
+          <br /><br />
+          <h2 class="fs-2">Publication</h2>
+          <p class="fs-5">
+            SEGA 2025 is scheduled as a hybrid meeting. For each accepted paper, 
+            at least one author must register and participate in the workshop. All 
+            accepted workshop papers will be published by IEEE CPS (IEEE-DL and EI 
+            indexed). Best Paper Awards will be presented to high quality papers. 
+            Selected papers will be recommended to special issues. More details 
+            can be found via <a href="http://ieee-smart-world.org/2025/">SWC 
+            Website</a>
           </p>
         </div>
       </div>
