updated advisory committee order and methodology descriptions

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -98,12 +98,14 @@ title: SEGA Workshop 2025
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column w-100">
-            <h5 class="fs-6 fw-bold">Advisory Committee</h5>
+            <h5 class="fs-6 fw-bold">Advisory Committee (in alphabetical
+              order of last names)</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Phil Winne<br />
-                Simon Fraser University, Canada<br />
-                <a href="mailto:winne@sfu.ca">winne@sfu.ca</a>
+                Giancarlo Fortino <br />
+                The University of Calabria, Italy <br />
+                <a href="mailto:giancarlo.fortino@unical.it"
+                  >giancarlo.fortino@unical.it</a>
               </h5>
               <h5 class="fs-6">
                 Oscar Lin <br />
@@ -111,11 +113,9 @@ title: SEGA Workshop 2025
                 <a href="mailto:oscarl@athabascau.ca">oscarl@athabascau.ca</a>
               </h5>
               <h5 class="fs-6">
-                Giancarlo Fortino <br />
-                The University of Calabria, Italy <br />
-                <a href="mailto:giancarlo.fortino@unical.it"
-                  >giancarlo.fortino@unical.it</a
-                >
+                Phil Winne<br />
+                Simon Fraser University, Canada<br />
+                <a href="mailto:winne@sfu.ca">winne@sfu.ca</a>
               </h5>
             </div>
           </div>
@@ -133,17 +133,7 @@ title: SEGA Workshop 2025
       <div>
         <h2 class="fs-2 mb-2">Join us for the SEGA Workshop 2025</h2>
         <p class="fs-5">
-          This workshop seeks to bridge innovation and responsibility in
-          AI-enhanced education by uniting researchers, educators, and
-          technologists. It will explore methodologies like generative AI and
-          reinforcement learning to address technical challenges such as content
-          quality, ethical alignment, and adaptive learning systems.
-          Participants will examine strategies to optimize AI-generated
-          educational materials, improve human-AI interaction frameworks, and
-          deploy RL for personalized learning pathways. The workshop welcomes
-          submissions on real-world applications, content validation techniques,
-          and ethical governance models, aiming to foster interdisciplinary
-          solutions that prioritize both efficacy and equity in education.
+          This workshop seeks to bridge innovation and responsibility in AI-enhanced education by uniting researchers, educators, and technologists. It will explore a range of Machine Learning (ML) and Artificial Intelligence (AI) methodologies—including generative AI, reinforcement learning, supervised and unsupervised learning, and user-centered design—to address challenges such as content quality, ethical alignment, and adaptive learning systems. Participants will examine strategies to optimize AI- and ML-generated educational materials, enhance human-AI interaction frameworks, and implement personalized learning pathways. Submissions employing computational, empirical, or design-based approaches are welcome. The workshop particularly encourages interdisciplinary contributions that advance both efficacy and equity in education.
         </p>
       </div>
       <div class="row">
@@ -153,30 +143,18 @@ title: SEGA Workshop 2025
             <div class="col-12 mb-3 mb-sm-0">
               <h5 class="fs-5">Key topics include:</h5>
               <ul>
-                <li>Technical Challenges in AI-Driven Education</li>
-                <li>Methodologies and Tools</li>
+                <li>Technical Challenges in AI- and ML-Driven Education</li>
+                <li>Methodologies and Tools (e.g., RL, LLMs, supervised/unsupervised learning, user-centered design)</li>
                 <li>Human-AI Interaction Design</li>
                 <li>Ethical and Governance Considerations</li>
                 <li>Case Studies and Applications</li>
               </ul>
               <h5 class="fs-5">The workshop invites contributions on:</h5>
               <ul>
-                <li>
-                  Novel AI/RL algorithms for educational content generation and
-                  adaptation.
-                </li>
-                <li>
-                  Empirical studies on AI’s impact on learning outcomes and
-                  instructor workloads.
-                </li>
-                <li>
-                  Frameworks for evaluating AI-generated content validity and
-                  inclusivity.
-                </li>
-                <li>
-                  Ethical guidelines and policy recommendations for
-                  institutional AI adoption.
-                </li>
+                <li>Novel AI/ML/RL algorithms and other computational methods for educational content generation and adaptation</li>
+                <li>Empirical studies on AI/ML’s impact on learning outcomes, self-regulation, student engagement, and instructor workloads</li>
+                <li>Frameworks for evaluating AI- and/or ML-generated content validity, accessibility, and inclusivity</li>
+                <li>Ethical guidelines, participatory design, and policy frameworks for responsible AI/ML integration in education</li>
               </ul>
             </div>
           </div>
@@ -190,57 +168,32 @@ title: SEGA Workshop 2025
             fairness to all prospective authors, we request that all submissions 
             to SEGA 2025 follow the formatting and submission rules detailed 
             below. To maintain a review process that is fair to all potential 
-            authors, submissions that violate these instructions may not be r
-            eviewed.
+            authors, submissions that violate these instructions may not be 
+            reviewed.
           </p>
-          <h5 class="fs-5">Requirements</h5>
+          <h5 class="fs-4">Requirements</h5>
           <p class="fs-5">
-            We invite submissions in two categories: regular paper (6 pages) and 
+            We invite submissions in two categories: regulars (6 pages) and 
             short papers (4 pages) excluding references.
           </p>
-            <ul>
-              <li>
-                No appendix is allowed
-              </li>
-              <li>
-                Each reference must specify all authors (no et al.)
-              </li>
-              <li>
-                Paper size: US Letter 8.5in x 11in
-              </li>
-              <li>
-                Ensure that the figures and tables are legible
-              </li>
-            </ul>
+          <ul>
+            <li>No appendix is allowed</li>
+            <li>Each reference must specify all authors (no et al.)</li>
+            <li>Paper size: US Letter 8.5in x 11in</li>
+            <li>Ensure that the figures and tables are legible</li>
+          </ul>
           <p class="fs-5">
-            A submission can have at most 2 additional pages with the pages 
-            overlength charge if accepted. The material presented should be 
-            original and not published or under submission elsewhere. All 
-            manuscripts should be formatted manuscripts must be in English, 
-            following the IEEE two-column manuscript templates for conference 
-            proceedings instructions: 
+            A submission can have at most 2 additional pages with the pages overlength charge if accepted. The material presented should be original and not published or under submission elsewhere. All manuscripts should be formatted manuscripts must be in English, following the IEEE two-column manuscript templates for conference proceedings instructions: 
             <a href="https://www.ieee.org/conferences/publishing/templates.html">
               Template</a>
             <br /><br />
-            All types of papers should be submitted via the conferences’ EDAS 
-            system. Authors should register with the EDAS system first, and then 
-            make the submission via the conference link. Declare all the authors 
-            of the paper upfront. Addition/removal of authors once the paper is 
-            accepted will have to be approved by the program chairs, since it 
-            potentially undermines the goal of eliminating conflicts for reviewer 
-            assignment.
+            All types of papers should be submitted via the conferences’ EDAS system. Authors should register with the EDAS system first, and then make the submission via the conference link. Declare all the authors of the paper upfront. Addition/removal of authors once the paper is accepted will have to be approved by the program chairs, since it potentially undermines the goal of eliminating conflicts for reviewer assignment.
           </p>
           <a href="https://edas.info/newPaper.php?c=33582&track=131098" class="btn btn-primary w-50">Submit Your Work</a>
           <br /><br />
           <h2 class="fs-2">Publication</h2>
           <p class="fs-5">
-            SEGA 2025 is scheduled as a hybrid meeting. For each accepted paper, 
-            at least one author must register and participate in the workshop. All 
-            accepted workshop papers will be published by IEEE CPS (IEEE-DL and EI 
-            indexed). Best Paper Awards will be presented to high quality papers. 
-            Selected papers will be recommended to special issues. More details 
-            can be found via <a href="http://ieee-smart-world.org/2025/">SWC 
-            Website</a>
+            SEGA 2025 is scheduled as a hybrid meeting. For each accepted paper, at least one author must register and participate in the workshop. All accepted workshop papers will be published by IEEE CPS (IEEE-DL and EI indexed). Best Paper Awards will be presented to high quality papers. Selected papers will be recommended to special issues. More details can be found via <a href="http://ieee-smart-world.org/2025/">SWC Website</a>
           </p>
         </div>
       </div>
