Added Mohamed Ally to Sega advisory committee

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -102,6 +102,12 @@ title: SEGA Workshop 2025
               order of last names)</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
+                Mohamed Ally <br />
+                Athabasca University, Canada <br />
+                <a href="mailto:mohameda@athabascau.ca"
+                  >mohameda@athabascau.ca</a>
+              </h5>
+              <h5 class="fs-6">
                 Giancarlo Fortino <br />
                 The University of Calabria, Italy <br />
                 <a href="mailto:giancarlo.fortino@unical.it"
