--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -108,6 +108,12 @@ title: SEGA Workshop 2025
                   >mohameda@athabascau.ca</a>
               </h5>
               <h5 class="fs-6">
+                Jon Dron<br />
+                Athabasca University, Canada <br />
+                <a href="mailto:jond@athabascau.ca"
+                  >jond@athabascau.ca</a>
+              </h5>
+              <h5 class="fs-6">
                 Giancarlo Fortino <br />
                 The University of Calabria, Italy <br />
                 <a href="mailto:giancarlo.fortino@unical.it"
