Work on AI and ML session

--- a/uic/index.html
+++ b/uic/index.html
@@ -274,7 +274,7 @@ title: IEEE UIC 2025
           <h3 class="">Paper Submission</h3>
           <p class="fs-5">
             All papers need to be submitted electronically through the
-            conterence submission website (EDAS) in PDF format at
+            conference submission website (EDAS) in PDF format at
             <a href="https://edas.info/N33589">EDAS</a>. Each paper is limited
             to 8 pages (or 10 pages with over-length charge) for a regular full
             paper, 6 pages (or 8 pages with over-length charge) for a full paper
