--- a/workshops/ai-and-machine-learning/index.html
+++ b/workshops/ai-and-machine-learning/index.html
@@ -23,6 +23,13 @@ title: AI and Machine Learning Workshop 2025
         AI and Machine Learning: Transforming Data Analytics for Global Impact
         on Sustainability, Healthcare, and a Resilient Future
       </h1>
+      <div>
+        <a
+          class="btn btn-primary fw-bolder"
+          href="https://edas.info/newPaper.php?c=33582&track=129804"
+          >Submit Paper to Workshop</a
+        >
+      </div>
     </div>
   </div>
 </section>
@@ -31,44 +38,71 @@ title: AI and Machine Learning Workshop 2025
   class="page-section container-fluid px-5 py-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="row g-5">
-    <div class="col-sm-12 d-flex flex-column gap-4">
-      <div class="d-flex flex-column gap-4">
-        <h2 class="fs-2 mb-2">
-          Join us at the AI and Machine Learning Workshop 2025
-        </h2>
-        <div class="d-flex gap-1 flex-column">
-          <div class="d-flex flex-column">
-            <h4 class="fs-5 fw-bold">Session Organizers</h4>
-            <h5 class="fs-6">
-              Dr. Sangeeta Kumari, Bennett University (Times Group), Greater
-              Noida, U.P., India
-            </h5>
-            <h5 class="fs-6">
-              Email:
-              <a href="mailto:sangeeta.kumari@bennett.edu.in"
-                >sangeeta.kumari@bennett.edu.in</a
-              >
-            </h5>
+    <div class="col-sm-4 d-flex flex-column gap-4">
+      <div class="card bg-light-subtle">
+        <div
+          class="card-body d-flex flex-column justify-content-between align-items-center"
+        >
+          <h4 class="fs-5 fw-bold">Important Dates</h4>
+          <hr class="w-100" />
+          <h5 class="fs-6 fw-bold text-center m-0">Submission Deadline</h5>
+          <h6 class="">April 30, 2025</h6>
+          <hr class="w-100" />
+          <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
+          <h6 class="">May 11, 2025</h6>
+          <hr class="w-100" />
+          <h5 class="fs-6 fw-bold text-center">Camera-Ready Submission</h5>
+          <h6 class="">June 21, 2025</h6>
+        </div>
+      </div>
+      <div class="card bg-light-subtle">
+        <div
+          class="card-body d-flex flex-column justify-content-between align-items-center"
+        >
+          <h4 class="fs-5 fw-bold">Organizers</h4>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column w-100">
+            <div class="d-flex flex-column w-100">
+              <h5 class="fs-6">
+                Dr. Sangeeta Kumari <br />
+                Bennett University (Times Group), Greater Noida, U.P., India
+                <br />
+                <a href="mailto:sangeeta.kumari@bennett.edu.in"
+                  >sangeeta.kumari@bennett.edu.in</a
+                >
+              </h5>
+            </div>
           </div>
         </div>
-        <p class="fs-5">
-          In an era defined by unprecedented data volumes and complex global
-          challenges, this session aims to explore the transformative role of
-          Artificial Intelligence (AI) and Machine Learning (ML) in redefining
-          data analytics across critical domains such as healthcare,
-          sustainability, and intelligent systems. As AI and ML technologies
-          mature, this session offers a crucial platform to address urgent
-          real-world problems and shape innovative solutions that drive global
-          resilience and progress.
-          <br /><br />
-          Participants will engage in discussions about advancements that
-          enhance data-driven decision-making, intelligent computing, and smart
-          communication systems, fostering cross-disciplinary collaboration. The
-          session will serve as a nexus for researchers, practitioners, and
-          thought leaders to share cutting-edge methods, applications, and
-          visionary directions in AI and data analytics with global impact.
-        </p>
       </div>
+    </div>
+    <div class="col-sm-8 d-flex flex-column gap-4">
+      <div class="row">
+        <div class="d-flex flex-column gap-4">
+          <h2 class="fs-2 mb-2">
+            Join us at the AI and Machine Learning Workshop 2025
+          </h2>
+          <p class="fs-5">
+            In an era defined by unprecedented data volumes and complex global
+            challenges, this session aims to explore the transformative role of
+            Artificial Intelligence (AI) and Machine Learning (ML) in redefining
+            data analytics across critical domains such as healthcare,
+            sustainability, and intelligent systems. As AI and ML technologies
+            mature, this session offers a crucial platform to address urgent
+            real-world problems and shape innovative solutions that drive global
+            resilience and progress.
+            <br /><br />
+            Participants will engage in discussions about advancements that
+            enhance data-driven decision-making, intelligent computing, and
+            smart communication systems, fostering cross-disciplinary
+            collaboration. The session will serve as a nexus for researchers,
+            practitioners, and thought leaders to share cutting-edge methods,
+            applications, and visionary directions in AI and data analytics with
+            global impact.
+          </p>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
           <h2 class="fs-2">Recommended Topics</h2>
@@ -170,6 +204,13 @@ title: AI and Machine Learning Workshop 2025
             >. All submitted papers will be reviewed on a double-blind,
             peer-review basis.
           </p>
+          <div>
+            <a
+              class="btn btn-primary fw-bolder"
+              href="https://edas.info/newPaper.php?c=33582&track=129804"
+              >Submit Paper to Workshop</a
+            >
+          </div>
         </div>
       </div>
     </div>
