--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -71,19 +71,6 @@ title: SEGA Workshop 2025
             </div>
           </div>
           <hr class="w-100" />
-          <!-- <div class="d-flex gap-1 flex-column w-100">
-            <h5 class="fs-6 fw-bold">Program Chair</h5>
-            <div class="d-flex flex-column">
-              <h5 class="fs-6">
-                Francesco Pupo <br />
-                The University of Calabria, Italy <br />
-                <a href="mailto:francesco.pupo@unical.it"
-                  >francesco.pupo@unical.it</a
-                >
-              </h5>
-            </div>
-          </div>
-          <hr class="w-100" /> -->
           <div class="d-flex gap-1 flex-column w-100">
             <h5 class="fs-6 fw-bold">Program Chair</h5>
             <div class="d-flex flex-column">
@@ -92,6 +79,19 @@ title: SEGA Workshop 2025
                 British Columbia Institute of Technology, Canada <br />
                 <a href="mailto:marco_ho@bcit.ca"
                   >marco_ho@bcit.ca</a
+                >
+              </h5>
+            </div>
+          </div>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column w-100">
+            <h5 class="fs-6 fw-bold">Publicity Chair</h5>
+            <div class="d-flex flex-column">
+              <h5 class="fs-6">
+                Thomas Kin Fung Chiu<br />
+                The Chinese University of Hong Kong, Hong Kong<br />
+                <a href="mailto:tchiu@cuhk.edu.hk"
+                  >tchiu@cuhk.edu.hk</a
                 >
               </h5>
             </div>
