updated Thomas name for SEGA 2025

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -88,7 +88,7 @@ title: SEGA Workshop 2025
             <h5 class="fs-6 fw-bold">Publicity Chair</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Thomas Kin Fung Chiu<br />
+                Thomas Kin-Fung Chiu<br />
                 The Chinese University of Hong Kong, Hong Kong<br />
                 <a href="mailto:tchiu@cuhk.edu.hk"
                   >tchiu@cuhk.edu.hk</a
